:ref: simplified preprocessing, removed unused annotations and interceptors